adjust table, fix js warnings, fix fuel gauge z-index

--- a/app/Frontend/styles/txc-demo.scss
+++ b/app/Frontend/styles/txc-demo.scss
@@ -32,6 +32,8 @@ body {
 }
 
 .panel {
+	position: relative;
+	overflow: hidden;
 	width:50%;
 	height:50%;
 	float:left;
@@ -40,10 +42,9 @@ body {
 	box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	-webkit-box-sizing:border-box;
-	border: 4px silver ridge;
-	position: relative;
+	border: 4px ridge silver;
+	border-radius: 15px;
 	text-align: center;
-	overflow: hidden;
 }
 
 .center {
@@ -53,7 +54,7 @@ body {
 	vertical-align: middle;
 }
 
-#panel1 { background-color: #FFF; }
+#panel1 { background-color: #FFF; margin-right: 0; }
 #panel2	{ background-color: #FFF; }
 #panel3	{ background-color: #FFF; text-align:left;}
 #panel4 { background-color: #FFF; }
@@ -93,7 +94,7 @@ body {
 	transform: translate(-50%,-50%);
 }
 
-#gaspan { position: absolute; bottom:0; left:0; right:0; background: rgba(128,128,128,.3); padding: 1em; }
+#gaspan { position: absolute; bottom:0; left:0; right:0; background: rgba(200,200,200,.3); padding: 1em; z-index: 1000;}
 
 #gas { position: relative; float: right; width: 69px; height: 92px; }
 #gas div { position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; overflow: hidden; }
